--- a/CarRentalManagement/Components/Layout/NavMenu.razor
+++ b/CarRentalManagement/Components/Layout/NavMenu.razor
@@ -20,7 +20,11 @@
             </NavLink>
         </div>
 
-
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Weather">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            </NavLink>
+            </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="samplepage">
